external-crates/move/crates/move-package-alt/tests/data/no_path_set_for_dependency/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/no_path_set_for_dependency/Move.toml"`
  ┌─ "tests/data/no_path_set_for_dependency/Move.toml":6:5
  │
6 │ A = { }
  │     ^^^
  │
  = dependency has no fields
